# codedb

./: .gitignore  AGENTS.md  README.md  code_graph_chatbot_plan.md  engine-gap-closure-plan.md  execution-plan-code-graph-chatbot.md  prd-code-graph-chatbot.md  process-tracing-implementation-plan.md  pyproject.toml  schema-and-contract-pack-code-graph-chatbot.md  semantic-search-implementation-plan.md  skills-parity-implementation-plan.md  tech-spec-code-graph-chatbot.md
code_graph_core/: __init__.py  client_support.py  gui.py  repl.py
code_graph_core/api/: __init__.py  indexing.py  querying.py
code_graph_core/graph/: __init__.py  builder.py  models.py  schema.py
code_graph_core/ingestion/: __init__.py  parser.py  scanner.py  symbol_extractor.py
code_graph_core/languages/: python.py  shared.py  typescript.py
code_graph_core/storage/: __init__.py  freshness.py  index_paths.py  kuzu_store.py  metadata.py
tests/: conftest.py  test_client_support.py  test_extraction.py  test_gui.py  test_index_paths.py  test_indexing.py  test_querying.py  test_repl.py  test_scanner.py  test_storage.py
tests/fixtures/ambiguity_app/src/: app.py
tests/fixtures/ambiguity_app/src/repos/: repo.py
tests/fixtures/ambiguity_app/src/users/: models.py
tests/fixtures/impact_app/src/: app.ts
tests/fixtures/impact_app/src/handlers/: invoice.ts
tests/fixtures/impact_app/src/jobs/: retries.ts
tests/fixtures/impact_app/src/services/: billing.ts
tests/fixtures/inheritance_app/src/: animals.py  models.ts
tests/fixtures/scanner_app/src/: example.py
(+14 files in other folders)
